added search widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,14 @@
             android:name=".SearchActivity"
             android:label="@string/title_activity_search"
             android:parentActivityName=".HomeActivity"
+            android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
+                android:resource="@xml/searchable"
                 android:value="com.mastermindapps.twitterati.HomeActivity" />
         </activity>
     </application>
